@startuml
!include Style.puml
hide empty members
skinparam minclassWidth 120
skinparam Padding 2

class Parser LOGIC_COLOUR
class Ui UI_COLOUR
class XYZCommand LOGIC_COLOUR
class OverviewCommand LOGIC_COLOUR
class Main MAIN_COLOUR

Ui .right.> Main : > sends input
Main ..> Parser : > creates
Parser ..> XYZCommand : > creates
Parser ..> OverviewCommand : > creates
OverviewCommand ..> Statistics : > creates
Statistics ..> OverviewCommand : > returns

XYZCommand ..> Ui : > returns message
OverviewCommand ..> Ui : > returns message
XYZCommand -right[hidden]- OverviewCommand


@enduml